overflow fixed

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "League Spartan", sans-serif;
+  overflow-x: hidden;
 }
 html {
   scroll-behavior: smooth;
